--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parse": "^4.12.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -22,6 +23,7 @@
     "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
